--- a/config/locales/devise.yml
+++ b/config/locales/devise.yml
@@ -48,7 +48,8 @@ pt-BR:
       send_instructions: "Dentro de minutos, você receberá um email com instruções para o desbloqueio da sua conta."
       send_paranoid_instructions: "Se sua conta existir, você receberá um e-mail com instruções para desbloqueá-la em alguns minutos."
       unlocked: "Sua conta foi desbloqueada com sucesso. Efetue login para continuar."
-
+    show:
+      current_password: "Senha atual"
   errors:
     messages:
       already_confirmed: "já foi confirmado"
