Add apresentação tcc

--- a/config/locales/active_record.yml
+++ b/config/locales/active_record.yml
@@ -144,7 +144,7 @@ pt-BR:
         other: 'Não foi possível gravar %{model}: %{count} erros'
   helpers:
     select:
-      prompt: Por favor selecione
+      prompt: Selecione
     submit:
       create: Criar %{model}
       submit: Salvar %{model}
