Add layout para gerenciamento de risco

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -86,3 +86,8 @@ pt-BR:
           user_task:
             user_id: Usuário
             task_id: Atividade
+          managment_risk:
+            title: Título
+            description: Descrição
+            probabitity: Probabilidade
+            contingency: Contigência
