Finalizado a feature de risk

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -89,5 +89,5 @@ pt-BR:
           managment_risk:
             title: Título
             description: Descrição
-            probabitity: Probabilidade
+            probability: Probabilidade
             contingency: Contigência
